<resources>
    <string name="app_name">Trivia App</string>
    <string name="new_quiz">New Quiz</string>
    <string name="see_stats">See Stats</string>
    <string name="clear_stats">Clear Stats</string>
    <string name="new_game">New Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="welcome_to_nbrian_s_ntrivia_game">Welcome to\nBrian\'s\nTrivia Game</string>
    <string name="select_a_category">Select a Category</string>
    <string name="books">Books</string>
    <string name="film">Film</string>
    <string name="music">Music</string>
    <string name="video_games">Video Games</string>
    <string name="television">Television</string>
    <string name="sports">Sports</string>
    <string name="mathematics">Mathematics</string>
    <string name="geography">Geography</string>
    <string name="mythology">Mythology</string>
    <string name="history">History</string>
    <string name="science_nature">Science + Nature</string>
    <string name="art">Art</string>
    <string name="politics">Politics</string>
    <string name="computers">Computers</string>
    <string name="animals">Animals</string>
    <string name="celebrities">Celebrities</string>
    <string name="select_your_ndifficulty_level">Select Your\nDifficulty Level</string>
    <string name="any_difficulty">Any Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="trivia_question">Trivia Question</string>
    <string name="answer_number_1">Answer number 1</string>
    <string name="answer_number_2">Answer number 2</string>
    <string name="answer_number_3">Answer number 3</string>
    <string name="answer_number_4">Answer number 4</string>
    <string name="total_score">Total Score</string>
    <string name="home">Home</string>
</resources>