<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoryFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_a_category"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_margin="15dp"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnGeneralKnowledge"
        android:layout_margin="15dp"
        android:padding="8dp"
        android:textSize="20sp"
        android:text="@string/general_knowledge"
        android:backgroundTint="@color/buttonsHome"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnBooks"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/books"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnFilm"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/film"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnMusic"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/music"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnVideoGames"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/video_games"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnTelevision"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/television"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnSports"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/sports"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnMathematics"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/mathematics"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnGeography"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/geography"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnMythology"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/mythology"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnHistory"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/history"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnScienceNature"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/science_nature"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnArt"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/art"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnPolitics"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/politics"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnComputers"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/computers"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnAnimals"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/animals"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnCelebrities"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:text="@string/celebrities"
            android:backgroundTint="@color/buttonsHome"
            android:textColor="@color/white"/>
    </LinearLayout>



</LinearLayout>