<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundHome"
    tools:context=".DifficultyFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="35sp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:padding="8dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/select_your_ndifficulty_level" />
    <Button
        android:id="@+id/btnAnyDifficulty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/buttonsHome"
        android:text="@string/any_difficulty"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/btnEasy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/easyBtn"
        android:text="@string/easy"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/btnMedium"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/mediumBtn"
        android:text="@string/medium"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/btnHard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/hardBtn"
        android:text="@string/hard"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textColor="@color/white"/>

</LinearLayout>