<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundHome"
    tools:context=".DifficultyFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:padding="8dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/trivia_question" />
    <Button
        android:id="@+id/btn0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/buttonsHome"
        android:text="@string/answer_number_1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/buttonsHome"
        android:text="@string/answer_number_2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/buttonsHome"
        android:text="@string/answer_number_3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="10dp"
        android:background="@color/buttonsHome"
        android:text="@string/answer_number_4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textColor="@color/white"/>

</LinearLayout>