<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/welcome_to_nbrian_s_ntrivia_game"
        android:layout_margin="10dp"
        android:paddingTop="60dp"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/buttonsHome"
            android:text="@string/new_game"/>
        <Button
            android:id="@+id/btnSeeStats"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="38dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/buttonsHome"
            android:text="@string/see_stats"/>


</LinearLayout>